--- a/service.html
+++ b/service.html
@@ -123,7 +123,7 @@ Potential</a>
                             </div>
                             <h3>Counseling</h3>
                             <p>
-                              Counseling involves helping people make needed changes in ways of thinking, feeling, and behaving, and is a goal-based collaborative process, involving a non-judgment 
+                              Counseling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br> 
                             <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                          </p>
                         </div>
@@ -149,7 +149,7 @@ Potential</a>
                             </div>
                             <h3>Hypnotherapy</h3>
                             <p>
-                               Hypnotherapy, also referred to as guided hypnosis, is a form of psychotherapy that uses relaxation, extreme concentration, and intense attention to achieve a heightened state of consciousness or mindfulness. In other words, it places the individual into a “trance” or altered state of awareness.
+                               Hypnotherapy is the practice of using the power of suggestion to bring about positive change in clients or patients who are under hypnosis. A hypnotherapist will meet with a client before performing hypnosis and discuss medical history, ailments and goals for treatment.
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -173,7 +173,7 @@ Potential</a>
                             </div>
                             <h3>Adolescent counseling</h3>
                             <p>
-                              Adolescent counselling is counselling aimed at young people to help them make sense of their feelings, behaviors and thoughts and entails the use of unique techniques that draw out the expressive nature of a young person like art therapy or more traditional approaches like talking therapy. This form of counselling is important in helping guiding kids transitioning into adulthood and to understand themselves better.
+                              The teenage years can be challenging for both teens and their parents. Adolescents face many struggles such as peer pressure, hormonal changes, academic expectations, and parental pressure, all while trying to discover their own unique identity and find worth and significance as a person. We offer a safe place for your teen to talk through their struggles and emotions while learning how to navigate problems in a healthy way.
                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -185,7 +185,7 @@ Potential</a>
                             </div>
                             <h3>Family and Relationship counseling</h3>
                             <p>
-                               Well, marriage counseling, also called couples therapy and marriage and family therapy, is a type of psychotherapy that focuses on improving your communication and conflict-resolution skills.
+                              Family therapy or family counseling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -196,7 +196,7 @@ Potential</a>
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/MaritalandPre-maritalCounseling.png"></i>
                             </div>
                             <h3>Grief And Loss</h3>
-                            <p>
+                            <p>Grief is a natural reaction to loss or change. Grief is most commonly discussed in relation to the death of a loved one or experienced following any major loss or change. Grieving individuals need reassurance that what they are experiencing is normal. Grief counseling is a form of psychotherapy that aims to help people cope with grief and mourning following the death of loved ones, or with major life changes that trigger feelings of grief (e.g., divorce). Counselors can help people understand and identify the ways as how to express or let go their feelings.
                                 <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -207,7 +207,7 @@ Potential</a>
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
                             </div>
                             <h3>Counseling for behavioural and emotional disorders</h3>
-                            <p>
+                            <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.
                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -218,7 +218,7 @@ Potential</a>
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/FamilyandRelationshipcounseling.png"></i>
                             </div>
                             <h3>Counseling for adjustment issues</h3>
-                            <p>
+                            <p>Adjustment disorder is characterized by emotions and behaviors associated with a stressful event that lead to difficulties in work, school, and relationships. Seen as a temporary condition usually lasting about six months, treatment is focused upon helping a person cope with the stressful situation or making a transition in a more productive manner. Psychotherapy is the choice of treatment for this disorder, with an emphasis on the event or situation, its impact upon the person's life, and how the person can move on from the effects the event had.
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
