--- a/service.html
+++ b/service.html
@@ -207,7 +207,7 @@ Potential</a>
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
                             </div>
                             <h3>Counseling for behavioural and emotional disorders</h3>
-                            <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.
+                            <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.<br>
                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
