--- a/Resources.html
+++ b/Resources.html
@@ -23,6 +23,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -75,6 +76,7 @@ Potential</a>
                                 <a href="Mental Health.html" class="dropdown-item">Basics of Mental Health</a>
                                 </div>
                         </div>
+                        <a href="https://wa.me/919643448705" class="whatsapp_float" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
                         <a href="Resources.html" class="nav-item nav-link">Resources</a>
                         <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
