--- a/service.html
+++ b/service.html
@@ -20,6 +20,7 @@
         <link href="lib/flaticon/font/flaticon.css" rel="stylesheet"> 
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
@@ -63,6 +64,7 @@
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <a href="https://wa.me/919643448705" class="whatsapp_float" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
@@ -207,7 +209,7 @@ Potential</a>
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
                             </div>
                             <h3>Counseling for behavioural and emotional disorders</h3>
-                            <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.<br>
+                            <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.
                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -226,6 +228,8 @@ Potential</a>
                 </div>
             </div>
         </div>
+        
+
         <!-- Service End -->
         <!-- Discount Start -->
         <div class="discount wow zoomIn" data-wow-delay="0.1s">
