--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -32,20 +32,20 @@
             <div class="card card-4">
                 <div class="card-body">
                     <h2 class="title">Make Your Appointment</h2>
-                    <form method="POST">
+                    <form method="POST" action="https://script.google.com/macros/s/AKfycbxtNBKQVTtLBxpp5ReU1Q9a7B7jTCTvxgI_9w3jwWeqlSXXCGu0wfxC8Ri2uhewexLNMw/exec">
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">first name</label>
-                                    <input class="input--style-4" type="text" name="first_name">
+                                    <label class="label">Name: </label>
+                                    <input class="input--style-4" type="text" name="name" id="name">
                                 </div>
                             </div>
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Date</label>
+                                    <label class="label">Date: </label>
                                     <div class="input-group-icon">
-                                        <input class="input--style-4 js-datepicker" type="text" name="Date">
+                                        <input class="input--style-4 js-datepicker" type="text" name="date" id="date">
                                         <!-- <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i> -->
                                     </div>
                                 </div>
@@ -55,21 +55,21 @@
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Email</label>
-                                    <input class="input--style-4" type="email" name="email">
+                                    <label class="label">Email: </label>
+                                    <input class="input--style-4" type="email" name="email" id="email">
                                 </div>
                             </div>
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Phone Number</label>
-                                    <input class="input--style-4" type="text" name="phone">
+                                    <label class="label">Phone Number: </label>
+                                    <input class="input--style-4" type="text" name="phone" id="phone">
                                 </div>
                             </div>
                         </div>
                         <div class="input-group">
-                            <label class="label">Subject</label>
+                            <label class="label">Time: </label>
                             <div class="rs-select2 js-select-simple select--no-search">
-                                <select name="subject">
+                                <select name="time" id="time">
                                     <option disabled="disabled" selected="selected">Choose option</option>
                                     <option>10:00Am - 11:00Am</option>
                                     <option>11:00AM - 12:00Pm</option>
@@ -88,11 +88,11 @@
                                    <!--  <label class="label">Gender</label> -->
                                     <div class="p-t-10">
                                         <label class="radio-container m-r-45">I Agree to Call Me Using this Credentials
-                                            <input type="radio" checked="checked" name="gender">
+                                            <input type="radio" checked="checked" name="agree" id="agree">
                                             <span class="checkmark"></span>
                                         </label>
                                         <label class="radio-container">I Disgree to Call Me Using this Credentials
-                                            <input type="radio" name="gender">
+                                            <input type="radio" name="disgree" id="disgree">
                                             <span class="checkmark"></span>
                                         </label>
                         </div>
