--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -88,11 +88,11 @@
                                 <!--  <label class="label">Gender</label> -->
                                 <div class="p-t-10">
                                     <label class="radio-container m-r-45">I Agree to Call Me Using this Credentials
-                                        <input type="radio" checked="checked" name="agree" id="agree">
+                                        <input type="radio" value="Agree" checked="checked" name="agree" id="agree">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radio-container">I Disgree to Call Me Using this Credentials
-                                        <input type="radio" name="disgree" id="disgree">
+                                        <input type="radio" value="Disgree" name="disgree" id="disgree">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
@@ -119,6 +119,7 @@
                 
                 <!-- Main JS-->
                 <script src="colorlib-booking-12/js/global.js"></script>
+                
                 <!-- Submit the Form to Google Using "AJAX" -->
                 <script data-cfasync="false" type="text/javascript"
                 src="form-submission-handler.js"></script>
