--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -32,7 +32,7 @@
             <div class="card card-4">
                 <div class="card-body">
                     <h2 class="title">Make Your Appointment</h2>
-                    <form method="POST" action="https://script.google.com/macros/s/AKfycbxtNBKQVTtLBxpp5ReU1Q9a7B7jTCTvxgI_9w3jwWeqlSXXCGu0wfxC8Ri2uhewexLNMw/exec">
+                    <form  class="gform pure-form pure-form-stacked"  method="POST" action="https://script.google.com/macros/s/AKfycbxtNBKQVTtLBxpp5ReU1Q9a7B7jTCTvxgI_9w3jwWeqlSXXCGu0wfxC8Ri2uhewexLNMw/exec">
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
@@ -119,7 +119,7 @@
                 
                 <!-- Main JS-->
                 <script src="colorlib-booking-12/js/global.js"></script>
-                
+
                 <!-- Submit the Form to Google Using "AJAX" -->
                 <script data-cfasync="false" type="text/javascript"
                 src="form-submission-handler.js"></script>
