--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -92,7 +92,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radio-container">I Disgree to Call Me Using this Credentials
-                                        <input type="radio" value="Disgree" name="disgree" id="disgree">
+                                        <input type="radio" value="Disgree" name="agree" id="agree">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
