--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -88,11 +88,11 @@
                                 <!--  <label class="label">Gender</label> -->
                                 <div class="p-t-10">
                                     <label class="radio-container m-r-45">I Agree to Call Me Using this Credentials
-                                        <input type="radio" value="Agree" checked="checked" name="agree" id="agree">
+                                        <input type="radio" value="Agree" checked="checked" name="call_request" id="agree">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radio-container">I Disgree to Call Me Using this Credentials
-                                        <input type="radio" value="Disgree" name="agree" id="disgree">
+                                        <input type="radio" value="Disgree" name="call_request" id="disgree">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
