--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -36,16 +36,16 @@
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Name: </label>
-                                    <input class="input--style-4" type="text" name="name" id="name">
+                                    <!-- <label class="label">Name: </label> -->
+                                    <input class="input--style-4" type="text" name="name" id="name" placeholder="Name : ">
                                 </div>
                             </div>
                             <div class="row row-space">
                                 <div class="col-2">
                                     <div class="input-group">
-                                        <label class="label">Date: </label>
+                                        <!-- <label class="label">Date: </label> -->
                                         <div class="input-group-icon">
-                                            <input class="input--style-4 js-datepicker" type="text" name="date" id="date">
+                                            <input class="input--style-4 js-datepicker" type="text" name="date" id="date" placeholder="Date : ">
                                             <!-- <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i> -->
                                         </div>
                                     </div>
@@ -55,14 +55,14 @@
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Email: </label>
-                                    <input class="input--style-4" type="email" name="email" id="email">
+                                    <!-- <label class="label">Email: </label> -->
+                                    <input class="input--style-4" type="email" name="email" id="email" placeholder="Email : ">
                                 </div>
                             </div>
                             <div class="col-2">
                                 <div class="input-group">
                                     <label class="label">Phone Number: </label>
-                                    <input class="input--style-4" type="text" name="phone" id="phone">
+                                    <input class="input--style-4" type="text" name="phone" id="phone" placeholder="Phone Number : ">
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                 <div class="select-dropdown"></div>
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-6">
                             <div class="input-group">
                                 <!--  <label class="label">Gender</label> -->
                                 <div class="p-t-10">
