--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="col-2">
                                 <div class="input-group">
-                                    <label class="label">Phone Number: </label>
+                                    <!-- <label class="label">Phone Number: </label> -->
                                     <input class="input--style-4" type="text" name="phone" id="phone" placeholder="Phone Number : ">
                                 </div>
                             </div>
