--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -26,7 +26,7 @@
     <link href="colorlib-booking-12/css/main.css" rel="stylesheet" media="all">
 </head>
 
-<body>
+<body style="position:relative;">
     <div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
         <div class="wrapper wrapper--w680">
             <div class="card card-4">
