--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -4,8 +4,8 @@
 <head>
     <!-- Required meta tags-->
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-    <meta content="width=device-width, initial-scale=0.8" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=yes">
+    <!-- <meta content="width=device-width, initial-scale=0.8" name="viewport"> -->
     <!-- Title Page-->
     <title>Phoenix Psychological Services</title>
     
