--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -80,8 +80,8 @@
 						</div>
 					</div>
 					<a href="Resources.html" class="nav-item nav-link">Resources</a>
-					<a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
-					<a href="contact.html" class="nav-item nav-link active">Contact</a>
+					<a href="Appaintment form.html" class="nav-item nav-link active">Appointment</a>
+					<a href="contact.html" class="nav-item nav-link ">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -111,7 +111,7 @@
 	<div class="container">
 		<div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
 			<p>Get In Touch</p>
-			<h2>For Any Query</h2>
+			<h2>For Appointment</h2>
 		</div>
 		<div class="row">
 			<div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
