--- a/service.html
+++ b/service.html
@@ -84,7 +84,7 @@ Potential</a>
                             </div>
                         </div>
                         <a href="Resources.html" class="nav-item nav-link">Resources</a>
-                        <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
+                        <a href="Appointment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
