--- a/Resources.html
+++ b/Resources.html
@@ -62,7 +62,7 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
@@ -77,8 +77,8 @@ Potential</a>
                                 </div>
                         </div>
                         <a href="https://wa.me/919643448705" class="whatsapp_float" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
-                        <a href="Resources.html" class="nav-item nav-link">Resources</a>
-                        <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
+                        <a href="Resources.html" class="nav-item nav-link active">Resources</a>
+                        <a href="Appointment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
