--- a/Appointment form.html
+++ b/Appointment form.html
@@ -154,27 +154,28 @@
 						<div class="form-group">
 									<select name="time" id="time">
 										<option disabled="disabled" selected="selected">Choose Time</option>
-										<option>10:00Am - 11:00Am</option>
-										<option>11:00AM - 12:00Pm</option>
-										<option>12:00Pm - 1:00Pm</option>
-										<option>1:00Pm - 2:00Pm</option>
-										<option>2:00Pm - 3:00Pm</option>
-										<option>3:00Pm - 4:00Pm</option>
-										<option>4:00Pm - 5:00Pm</option>
-										<option>5:00Pm - 6:00Pm</option>
+										<option>10:00 AM - 11:00 AM</option>
+										<option>11:00 AM - 12:00 PM</option>
+										<option>12:00 PM - 01:00 PM</option>
+										<option>01:00 PM - 02:00 PM</option>
+										<option>02:00 PM - 03:00 PM</option>
+										<option>03:00 PM - 04:00 PM</option>
+										<option>04:00 PM - 05:00 PM</option>
+										<option>05:00 PM - 06:00 PM</option>
 									</select>
 								</div>	
 						<div class="form-group">
 
 							<input type="radio" value="Agree" checked="checked" name="call_request" id="agree">
-							<label class="radio-container m-r-45">I Agree to Call Me Using this Credentials 
+							<label class="radio-container m-r-45">By providing the above information you agree to be contacted by us for fixing appointments and for the purpose of Counselling.
+ 
 							</label>
 
 						</div>
 						<div class="form-group">
 
 							<input type="radio" value="Disgree" name="call_request" id="disgree">
-							<label class="radio-container">I Disgree to Call Me Using this Credentials 
+							<label class="radio-container">I Disagree to contact me 
 							</label>
 						</div>						
 						<br>
