--- a/Appointment form.html
+++ b/Appointment form.html
@@ -128,12 +128,12 @@
 							<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input class="input--style-4" type="text" name="name" id="name" placeholder="Name  " required>
+											<input class="input--style-4" type="text" name="name" id="name" placeholder="Name* " required>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input class="input--style-4 js-datepicker" type="date" name="date" id="date" placeholder="Date  " required>
+											<input class="input--style-4 js-datepicker" type="date" name="date" id="date" placeholder="Date*  " required>
 										</div>
 									</div>
 								</div>
@@ -141,12 +141,12 @@
 							<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input class="input--style-4" type="email" name="email" id="email" placeholder="Email  ">
+											<input class="input--style-4" type="email" name="email" id="email" placeholder="Email*  "required>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input class="input--style-4" type="text" name="phone" id="phone" placeholder="Phone Number  ">
+											<input class="input--style-4" type="text" name="phone" id="phone" placeholder="Phone Number* " required>
 										</div>
 									</div>
 								</div>
