--- a/contact.html
+++ b/contact.html
@@ -151,8 +151,8 @@ Potential</a>
 
     <div class="control-group">
       <fieldset>
-        <label for="name">Name: </label>
-        <input class="form-control" id="name" name="name" placeholder="Enter Your Name" />
+        <label for="name">Name:* </label>
+        <input class="form-control" id="name" name="name" placeholder="Enter Your Name" required />
       </fieldset>
 
       <fieldset>
@@ -168,7 +168,7 @@ Potential</a>
       </fieldset>
 
       <fieldset>
-        <label for="email"><em>Your</em> Email Address:</label>
+        <label for="email"><em>Your</em> Email Address:*</label>
         <input class="form-control" id="email" name="email" type="email" value=""
         required placeholder="example@email.com"/>
       </fieldset>
