--- a/contact.html
+++ b/contact.html
@@ -119,22 +119,19 @@ Potential</a>
                     <div class="col-md-4 contact-item wow zoomIn" data-wow-delay="0.2s">
                         <i class="fa fa-map-marker-alt"></i>
                         <div class="contact-text">
-                            <h2>Location</h2>
-                            <p>Panvel, Navi mumbai, Maharashtra, India.</p>
+                            <a href="https://goo.gl/maps/Zj37rTCM9muQxx5F9">Panvel, Navi mumbai, Maharashtra, India.</a>
                         </div>
                     </div>
                     <div class="col-md-4 contact-item wow zoomIn" data-wow-delay="0.4s">
                         <i class="fa fa-phone-alt"></i>
                         <div class="contact-text">
-                            <h2>Phone</h2>
-                            <p>+91 96434 48705</p>
+                            <a href="tel:+91 96434 48705">+91 96434 48705</a>
                         </div>
                     </div>
                     <div class="col-md-4 contact-item wow zoomIn" data-wow-delay="0.6s">
                         <i class="far fa-envelope"></i>
                         <div class="contact-text">
-                            <h2>Email</h2>
-                            <p>Phoenixforcounselling@gmail.com</p>
+                            <a href="mailto:Phoenixforcounselling@gmail.com">Phoenixforcounselling@gmail.com</a>
                         </div>
                     </div>
                 </div>
