--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@ Potential</a>
       <fieldset>
         <label for="message">Message: </label>
         <textarea class="form-control" id="message" name="message" rows="10"
-        placeholder="Yor Message..."></textarea>
+        placeholder="Your Message..."></textarea>
       </fieldset>
 
       <fieldset>
