--- a/service.html
+++ b/service.html
@@ -123,9 +123,9 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/counseling.svg"></i>
                             </div>
-                            <h3>Counseling</h3>
+                            <h3>Counselling</h3>
                             <p>
-                              Counseling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br> 
+                              Counselling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br> 
                             <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                          </p>
                         </div>
@@ -161,9 +161,9 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/MaritalandPre-maritalCounseling.png"></i>
                             </div>
-                            <h3>Marital and Pre-marital Counseling</h3>
+                            <h3>Marital and Pre-marital Counselling</h3>
                             <p>
-                                Marital and Pre-marital counseling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage.
+                                Marital and Pre-marital counselling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage.
                                 <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -173,7 +173,7 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
                             </div>
-                            <h3>Adolescent counseling</h3>
+                            <h3>Adolescent counselling</h3>
                             <p>
                               The teenage years can be challenging for both teens and their parents. Adolescents face many struggles such as peer pressure, hormonal changes, academic expectations, and parental pressure, all while trying to discover their own unique identity and find worth and significance as a person. We offer a safe place for your teen to talk through their struggles and emotions while learning how to navigate problems in a healthy way.
                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
@@ -185,9 +185,9 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/FamilyandRelationshipcounseling.png"></i>
                             </div>
-                            <h3>Family and Relationship counseling</h3>
+                            <h3>Family and Relationship counselling</h3>
                             <p>
-                              Family therapy or family counseling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.
+                              Family therapy or family counselling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
