--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/counseling.svg"></i>
                             </div>
-                            <h3>Counseling</h3>
+                            <h3>Counselling</h3>
                             <p>
-                                Counseling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br>
+                                Counselling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br>
                             </p>
                             <p> 
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
@@ -215,9 +215,9 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/MaritalandPre-maritalCounseling.png"></i>
                             </div>
-                            <h3>Marital and Pre-marital Counseling</h3>
+                            <h3>Marital and Pre-marital Counselling</h3>
                             <p>
-                                Marital and Pre-marital counseling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage. <br>
+                                Marital and Pre-marital counselling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage. <br>
                             </p>
                             <p> 
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
@@ -228,7 +228,7 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
                             </div>
-                            <h3>Adolescent counseling</h3>
+                            <h3>Adolescent counselling</h3>
                             <p>
                                 The teenage years can be challenging for both teens and their parents. Adolescents face many struggles such as peer pressure, hormonal changes, academic expectations, and parental pressure, all while trying to discover their own unique identity and find worth and significance as a person. We offer a safe place for your teen to talk through their struggles and emotions while learning how to navigate problems in a healthy way.
                             </p>
@@ -241,9 +241,9 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/FamilyandRelationshipcounseling.png"></i>
                             </div>
-                            <h3>Family and Relationship counseling</h3>
+                            <h3>Family and Relationship counselling</h3>
                             <p>
-                                Family therapy or family counseling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.<br>
+                                Family therapy or family counselling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.<br>
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
@@ -264,7 +264,7 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
                             </div>
-                            <h3>Counseling for behavioural and emotional disorders</h3>
+                            <h3>Counselling for behavioural and emotional disorders</h3>
                             <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.<br>
                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
@@ -275,7 +275,7 @@ Potential</a>
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/FamilyandRelationshipcounseling.png"></i>
                             </div>
-                            <h3>Counseling for adjustment issues</h3>
+                            <h3>Counselling for adjustment issues</h3>
                             <p>Adjustment disorder is characterized by emotions and behaviors associated with a stressful event that lead to difficulties in work, school, and relationships. Seen as a temporary condition usually lasting about six months, treatment is focused upon helping a person cope with the stressful situation or making a transition in a more productive manner. Psychotherapy is the choice of treatment for this disorder, with an emphasis on the event or situation, its impact upon the person's life, and how the person can move on from the effects the event had.
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
