--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Potential</a>
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/FamilyandRelationshipcounseling.png"></i>
                             </div>
                             <h3>Counselling for adjustment issues</h3>
-                            <p>Adjustment disorder is characterized by emotions and behaviors associated with a stressful event that lead to difficulties in work, school, and relationships. Seen as a temporary condition usually lasting about six months, treatment is focused upon helping a person cope with the stressful situation or making a transition in a more productive manner. Psychotherapy is the choice of treatment for this disorder, with an emphasis on the event or situation, its impact upon the person's life, and how the person can move on from the effects the event had.
+                            <p>Adjustment disorder is characterized by emotions and behaviors associated with a stressful event that lead to difficulties in work, school, and relationships. Seen as a temporary condition usually lasting about six months, treatment is focused upon helping a person cope with the stressful situation or making a transition in a more productive manner. Psychotherapy is the choice of treatment for this disorder, with an emphasis on the event or situation, its impact upon the person's life, and how the person can move on from the effects the event had.<br><br>
                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
