--- a/contact.html
+++ b/contact.html
@@ -179,6 +179,8 @@ Potential</a>
       <h2>Thanks for contacting us!
         We will get back to you soon!</h2>
     </div>
+</div>
+    <input type="reset" value="reset" name=""> 
 
   </form>
 
