--- a/Appointment form.html
+++ b/Appointment form.html
@@ -188,6 +188,7 @@
 						<h2>Thanks for contacting us!
 						We will get back to you soon!</h2>
 					</div>
+					<input type="reset" value="reset" name="">
 
 				</form>
 
